[package]
name = "checkpointui"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
colored_json = "5.0.0"
human_format = "1.1.0"
owning_ref = "0.4.1"
ratatui = "0.29.0"
regex = "1.11.1"
safetensors = "0.5.3"
serde_json = "1.0.140"
tui-scrollview = "0.5.1"
