[package]
name = "checkpointui"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
async_cell = { version = "0.2.3", features = ["weakref"] }
clap = { version = "4.5.38", features = ["derive"] }
colored_json = "5.0.0"
faer = "0.22.6"
float8 = { version = "0.2.1", features = ["zerocopy"] }
futures-lite = "2.6.0"
half = { version = "=2.4.1", features = ["zerocopy"] }
human_format = "1.1.0"
json5 = "0.4.1"
lexical-sort = "0.3.1"
owning_ref = "0.4.1"
rand = "0.8.5"
ratatui = "0.29.0"
regex = "1.11.1"
safetensors = "0.5.3"
serde_json = "1.0.140"
tui-scrollview = "0.5.1"
weakref = "0.2.0"
zerocopy = "0.6"
